# SDL3_2D_Template

./: CMakeLists.txt
assets/: credits.txt
include/: Application.hpp  GameContext.hpp
include/Common/: Clock.hpp  Debug.hpp  JSON.hpp  Logger.hpp  MathUtils.hpp  Random.hpp  Rect.hpp  Vector.hpp
include/Input/: InputKeys.hpp  InputManager.hpp  ScopedInputBinder.hpp
include/Render/: AnimatedSprite.hpp  Color.hpp  Sprite.hpp  Text2D.hpp
include/Resources/: AssetsManager.hpp  Font.hpp  Music.hpp  SoundBuffer.hpp  Texture.hpp
include/State/: IntroState.hpp  MainMenuState.hpp  State.hpp  StateManager.hpp
include/World/: Entity.hpp
src/: Application.cpp  GameContext.cpp  Main.cpp
src/Common/: Clock.cpp
src/Input/: InputManager.cpp  ScopedInputBinder.cpp
src/Render/: AnimatedSprite.cpp  Sprite.cpp  Text2D.cpp  Text2D.hpp
src/Resources/: AssetsManager.cpp  Font.cpp  Music.cpp  SoundBuffer.cpp  Texture.cpp
src/State/: IntroState.cpp  MainMenuState.cpp  StateManager.cpp
